--- a/src/app/drug-record/drug-record.component.html
+++ b/src/app/drug-record/drug-record.component.html
@@ -1,1 +1,57 @@
-<p>drug-record works!</p>
+<form (ngSubmit)="onSubmit(f3)" #f3="ngForm">
+    <div class="container" style="margin-top: 5%">    
+    <table class="table table-striped table-bordered">    
+        <thead>    
+            <tr>    
+                <th>X</th>    
+                <th>Drug Item</th>    
+                <th>Qty</th>    
+                <th>Units</th>
+                <th>Item</th>    
+                <th>Link</th>    
+                <th>Brand</th>    
+            </tr>    
+        </thead>    
+        <tbody>    
+             <tr *ngFor="let dr of drugRecords; let i = index;">    
+              <td (click)="deleteRow(i)">    
+                <i class="fa fa-trash fa-1x"></i>    
+              </td>    
+              <td>
+                <select 
+                [name]="rs.getName('drugItemid',i)"
+                class="form-control"
+                required
+                [(ngModel)] = "dr.Id"
+                (change)="onItemChanged(dr.Id,i)">
+                   <option *ngFor="let item of rs.DrugItems"  [selected]="item.Id == dr.Id"  [value]="item.Id">{{item.value}}</option> 
+                </select>                
+              </td>
+                <td>    
+                    {{dr.cant}}
+                </td>  
+                <td>{{dr.unidad}}</td>
+                <td>
+                  <img [src]="dr.image" class="img-responsive" style="max-height: 40px;">
+                </td>  
+                <td><a [href]="dr.image" target="_blank">Link</a></td>
+                <td>{{dr.brand}}</td>
+            </tr>    
+            <tr>    
+              <td (click)="addRow(i)">    
+                <i class="fa fa-plus fa-1x"></i>    
+              </td>    
+            </tr>    
+        </tbody>    
+    </table>    
+  </div>    
+  <button 
+class="btn btn-primary" 
+type="submit">Submit</button>
+
+</form>
+<!--
+    //todo: never enabling the button, removed temporarluy
+    [disabled]="!f3.valid"
+
+-->
