--- a/src/app/drug-record/drug-record.component.html
+++ b/src/app/drug-record/drug-record.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onSubmit(f3)" #f3="ngForm">
-    <div class="container" style="margin-top: 5%">    
+    <div class="form-group" style="margin-top: 5%">    
     <table class="table table-striped table-bordered">    
         <thead>    
             <tr>    
@@ -8,8 +8,6 @@
                 <th>Qty</th>    
                 <th>Units</th>
                 <th>Item</th>    
-                <th>Link</th>    
-                <th>Brand</th>    
             </tr>    
         </thead>    
         <tbody>    
@@ -34,14 +32,14 @@
                 <td>
                   <img [src]="dr.image" class="img-responsive" style="max-height: 40px;">
                 </td>  
-                <td><a [href]="dr.image" target="_blank">Link</a></td>
-                <td>{{dr.brand}}</td>
-            </tr>    
+            </tr>   
+            <!--
             <tr>    
               <td (click)="addRow(i)">    
                 <i class="fa fa-plus fa-1x"></i>    
               </td>    
             </tr>    
+            --> 
         </tbody>    
     </table>    
   </div>    
