local deploy fixes

--- a/src/app/drug-record/drug-record.component.html
+++ b/src/app/drug-record/drug-record.component.html
@@ -1,5 +1,5 @@
 <form (ngSubmit)="onSubmit(f3)" #f3="ngForm">
-    <div class="form-group" style="margin-top: 5%">    
+    <div class="form-group">    
     <table class="table table-striped table-bordered">    
         <thead>    
             <tr>    
